# backend-engineering-challenge

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: hash_map_moving_average_test.py  queue_moving_average_test.py  util.py
tests/resources/input/: big_event_gap.json  end_year.json  leap_year.json  multiple.json  multiple_events_window_1.json  non_leap_year.json  one.json  sample.json
tests/resources/output/: end_year.json  leap_year.json  multiple.json  multiple_events_window_1.json  non_leap_year.json  one.json  window_0.json  window_5.json
unbabel_cli/: __main__.py
unbabel_cli/algorithm/: __init__.py  hash_map_moving_average_algorithm.py  queue_moving_average_algorithm.py
unbabel_cli/config/: date.py
unbabel_cli/model/: __init__.py  moving_average_algorithm.py
unbabel_cli/util/: date.py  file.py
